Styles/bookmark.css
#bookmark-container {
    position: absolute;
    width: 100%;
    height: 50px;
    display: flex;
    justify-content: center;
    background-color: black;
    z-index: 10;
}

#bookmark-logo {
    width: 60px;
    height: 100%;
    position: absolute;
    left: 5%;
    background-color: white;
    background-repeat: no-repeat;
    background-image:url(../Assets/logo.svg);
    background-size: cover;
    background-position: center;
}

#bookmark-navigations {
    width: 60%;
    display: flex;
    justify-content: space-evenly;
}

.bookmark-button {
    width: 25%;
    background-color: black;
    color: white;
    border: white solid 1px;
    border-top: 0;
    border-bottom: 0;
    margin: 0px 2px;
    font-size: 150%;
    text-wrap: nowrap;
    transition: all 0.5s ease;
    min-width: 150px;
}

.bookmark-button:hover {
    background-color: white;
    color: black;
}

